test/parsetest/invalid/method_call.java
class A {
    public void bla(){
        return bla()();
    }
}